force-app/main/default/objects/PMC_CLM_ContractTemplateMapping__mdt/PMC_CLM_ContractTemplateMapping__mdt.object-meta.xml
<CustomObject>
    <label>PMC CLM Contract Template Mapping</label>
    <pluralLabel>PMC CLM Contract Template Mapping</pluralLabel>
</CustomObject>