force-app/main/default/objects/PMC_CLM_ContractTemplateMapping__mdt/fields/PMC_CLM_Category__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Category__c</fullName>
    <description>Indicates FPD or Priced</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>