force-app/main/default/objects/PMC_CLM_ContractTemplateMapping__mdt/fields/PMC_CLM_ContractTemplateDocument_Name__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractTemplateDocument_Name__c</fullName>
    <description>This field will hold the name of the document that is stored within DocuSign CLM, corresponding to each unique combination of Contract Type and MOT</description>
    <label>Contract Template Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>