force-app/main/default/objects/PMC_CLM_ContractTemplateMapping__mdt/fields/PMC_CLM_ContractType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_ContractType__c</fullName>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>