force-app/main/default/objects/PMC_CLM_ContractTemplateMapping__mdt/fields/PMC_CLM_Country__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>