force-app/main/default/objects/PMC_CLM_ContractTemplateMapping__mdt/fields/PMC_CLM_MOT__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_MOT__c</fullName>
    <label>MOT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>