force-app/main/default/objects/PMC_CLM_ContractTemplateMapping__mdt/listViews/Complete_View.listView-meta.xml
<ListView>
    <fullName>Complete_View</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>PMC_CLM_Country__c</columns>
    <columns>PMC_CLM_ContractType__c</columns>
    <columns>PMC_CLM_Category__c</columns>
    <columns>PMC_CLM_MOT__c</columns>
    <columns>PMC_CLM_ContractTemplateDocument_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Complete View</label>
    <language>en_US</language>
</ListView>